# AMORcontrol

./: README.md
amorpos/: CMakeLists.txt  package.xml  pdefinitivo.cpp
codigosAMOR/: Bool.h  Bool.msg  CMakeLists.txt  Twist.h  Twist.msg  Vector3.h  Vector3.msg  amor.h  cartesian_rate_AMORfinal.cpp
gesture/: CMakeLists.txt  cambiarmodo.cpp  package.xml  reconocimientogestos.cpp
